# TinyJson

./: .gitignore  CMakeLists.txt  Data.json  LICENSE  README.md  TinyJson.cpp  TinyJson.h  main.cpp
data/: Data.json  output_test.json
include/: TinyJson.h
src/: TinyJson.cpp  main.cpp
test/: TinyJsonUnitTest.cc  install_google_test.txt
tests/: test_main.cpp
